# Rust-Graphql-ReactNative

./: .gitignore  package.json
client/: codegen.ts  package.json
client/src/: App.tsx
client/src/gql/: gql.ts  graphql.ts
client/src/pages/: index.tsx
server/: Cargo.toml
server/src/: main.rs
