[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.11"   
juniper_warp = "0.7.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.3"
